// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayForm component. Should display success toast on submit. 1`] = `
<div>
  <div
    class="Toastify"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-center"
      style="width: auto;"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click Toastify--animate Toastify__slide-enter--top-center"
        id="toastId"
        style="--nth: 1; --len: 1;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div
            class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
          >
            <svg
              fill="var(--toastify-icon-color-success)"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <path
                d="M12 0a12 12 0 1012 12A12.014 12.014 0 0012 0zm6.927 8.2l-6.845 9.289a1.011 1.011 0 01-1.43.188l-4.888-3.908a1 1 0 111.25-1.562l4.076 3.261 6.227-8.451a1 1 0 111.61 1.183z"
              />
            </svg>
          </div>
          <div>
            Play saved.
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          aria-hidden="true"
          aria-label="notification timer"
          class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          role="progressbar"
          style="animation-duration: 500ms; animation-play-state: paused; opacity: 0;"
        />
      </div>
    </div>
  </div>
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Edit Play
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/3 flex flex-col gap-y-3"
                data-testid="play-name"
              >
                <label
                  class="flex flex-col gap-y-2 text-dial-sapphire mb-2"
                >
                  <p
                    class="required-field"
                  >
                    Name
                  </p>
                  <input
                    class="w-full"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </label>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-tags"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                    for="name"
                  >
                    Tags
                    <div
                      class=""
                    >
                      <div
                        class="rounded text-sm text-dial-gray-dark my-auto css-l45kjq-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-:rc:-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="react-select__control css-1j14ozg-control"
                        >
                          <div
                            class="react-select__value-container css-17t7gkf-ValueContainer"
                          >
                            <div
                              class="react-select__placeholder css-5rjclb-placeholder"
                              id="react-select-:rc:-placeholder"
                            >
                              Add tag for this play.
                            </div>
                            <div
                              class="react-select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-describedby="react-select-:rc:-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="Filter by Tag"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="react-select__input"
                                id="async-select-id-undefined"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div>
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Tag: tag_1
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div>
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Tag: tag_2
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-products"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Products
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:rd:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:rd:-placeholder"
                          >
                            Add product for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:rd:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      product 1
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      product 2
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-buildingBlocks"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Building Blocks
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:re:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:re:-placeholder"
                          >
                            Add building block for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:re:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      bb 1
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      bb 2
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-full lg:w-2/3"
                data-testid="play-description"
                style="min-height: 20rem;"
              >
                <label
                  class="block text-dial-sapphire flex flex-col gap-y-2"
                >
                  <p
                    class="required-field"
                  >
                     
                    Description
                  </p>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </label>
              </div>
            </div>
            <div
              class="flex flex-wrap font-semibold text-xl lg:mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit and Assign Play
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayForm component. Should match snapshot Create. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Create New Play
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/3 flex flex-col gap-y-3"
                data-testid="play-name"
              >
                <label
                  class="flex flex-col gap-y-2 text-dial-sapphire mb-2"
                >
                  <p
                    class="required-field"
                  >
                    Name
                  </p>
                  <input
                    class="w-full"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </label>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-tags"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                    for="name"
                  >
                    Tags
                    <div
                      class=""
                    >
                      <div
                        class="rounded text-sm text-dial-gray-dark my-auto css-l45kjq-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-:r0:-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="react-select__control css-1j14ozg-control"
                        >
                          <div
                            class="react-select__value-container css-17t7gkf-ValueContainer"
                          >
                            <div
                              class="react-select__placeholder css-5rjclb-placeholder"
                              id="react-select-:r0:-placeholder"
                            >
                              Add tag for this play.
                            </div>
                            <div
                              class="react-select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-describedby="react-select-:r0:-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="Filter by Tag"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="react-select__input"
                                id="async-select-id-undefined"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-products"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Products
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:r1:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:r1:-placeholder"
                          >
                            Add product for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:r1:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  />
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-buildingBlocks"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Building Blocks
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:r2:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:r2:-placeholder"
                          >
                            Add building block for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:r2:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  />
                </div>
              </div>
              <div
                class="w-full lg:w-2/3"
                data-testid="play-description"
                style="min-height: 20rem;"
              >
                <label
                  class="block text-dial-sapphire flex flex-col gap-y-2"
                >
                  <p
                    class="required-field"
                  >
                     
                    Description
                  </p>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </label>
              </div>
            </div>
            <div
              class="flex flex-wrap font-semibold text-xl lg:mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit and Assign Play
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlayForm component. Should match snapshot Edit. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Edit Play
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/3 flex flex-col gap-y-3"
                data-testid="play-name"
              >
                <label
                  class="flex flex-col gap-y-2 text-dial-sapphire mb-2"
                >
                  <p
                    class="required-field"
                  >
                    Name
                  </p>
                  <input
                    class="w-full"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </label>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-tags"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                    for="name"
                  >
                    Tags
                    <div
                      class=""
                    >
                      <div
                        class="rounded text-sm text-dial-gray-dark my-auto css-l45kjq-container"
                      >
                        <span
                          class="css-1f43avz-a11yText-A11yText"
                          id="react-select-:r3:-live-region"
                        />
                        <span
                          aria-atomic="false"
                          aria-live="polite"
                          aria-relevant="additions text"
                          class="css-1f43avz-a11yText-A11yText"
                        />
                        <div
                          class="react-select__control css-1j14ozg-control"
                        >
                          <div
                            class="react-select__value-container css-17t7gkf-ValueContainer"
                          >
                            <div
                              class="react-select__placeholder css-5rjclb-placeholder"
                              id="react-select-:r3:-placeholder"
                            >
                              Add tag for this play.
                            </div>
                            <div
                              class="react-select__input-container css-qbdosj-Input"
                              data-value=""
                            >
                              <input
                                aria-autocomplete="list"
                                aria-describedby="react-select-:r3:-placeholder"
                                aria-expanded="false"
                                aria-haspopup="true"
                                aria-label="Filter by Tag"
                                autocapitalize="none"
                                autocomplete="off"
                                autocorrect="off"
                                class="react-select__input"
                                id="async-select-id-undefined"
                                role="combobox"
                                spellcheck="false"
                                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                                tabindex="0"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                          <div
                            class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                          >
                            <span
                              class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                            />
                            <div
                              aria-hidden="true"
                              class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                            >
                              <svg
                                aria-hidden="true"
                                class="css-tj5bde-Svg"
                                focusable="false"
                                height="20"
                                viewBox="0 0 20 20"
                                width="20"
                              >
                                <path
                                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                                />
                              </svg>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div>
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Tag: tag_1
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div>
                      <div
                        class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                        data-testid="pill"
                      >
                        Tag: tag_2
                        <svg
                          class="cursor-pointer opacity-50"
                          data-testid="remove-button"
                          fill="currentColor"
                          height="1.5em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1.5em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-products"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Products
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:r4:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:r4:-placeholder"
                          >
                            Add product for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:r4:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      product 1
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      product 2
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2"
                  data-testid="play-buildingBlocks"
                >
                  <label
                    class="text-dial-sapphire flex flex-col gap-y-2"
                  >
                    Building Blocks
                    <div
                      class=" css-l45kjq-container"
                    >
                      <span
                        class="css-1f43avz-a11yText-A11yText"
                        id="react-select-:r5:-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        class="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        class="react-select__control css-qv4grc-control"
                      >
                        <div
                          class="react-select__value-container css-17t7gkf-ValueContainer"
                        >
                          <div
                            class="react-select__placeholder css-5rjclb-placeholder"
                            id="react-select-:r5:-placeholder"
                          >
                            Add building block for this play.
                          </div>
                          <div
                            class="react-select__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-autocomplete="list"
                              aria-describedby="react-select-:r5:-placeholder"
                              aria-expanded="false"
                              aria-haspopup="true"
                              autocapitalize="none"
                              autocomplete="off"
                              autocorrect="off"
                              class="react-select__input"
                              id="async-select-id-undefined"
                              role="combobox"
                              spellcheck="false"
                              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                              tabindex="0"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                          >
                            <svg
                              aria-hidden="true"
                              class="text-2xl"
                              fill="none"
                              height="1em"
                              stroke="currentColor"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </label>
                  <div
                    class="flex flex-wrap gap-3 mt-2"
                  >
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      bb 1
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                    <div
                      class="shadow-md flex gap-2 px-2 py-1 bg-white text-dial-stratos"
                      data-testid="pill"
                    >
                      bb 2
                      <svg
                        class="cursor-pointer opacity-50"
                        data-testid="remove-button"
                        fill="currentColor"
                        height="1.5em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1.5em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="w-full lg:w-2/3"
                data-testid="play-description"
                style="min-height: 20rem;"
              >
                <label
                  class="block text-dial-sapphire flex flex-col gap-y-2"
                >
                  <p
                    class="required-field"
                  >
                     
                    Description
                  </p>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </label>
              </div>
            </div>
            <div
              class="flex flex-wrap font-semibold text-xl lg:mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit and Assign Play
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
